Fix merge issue